--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "run_script.py": {
-        "runtime": "python3.9"
+        "runtime": "@vercel/python@0.7.0"
       }
     }
   }
