--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "functions": {
       "api/run_script.py": {
-        "runtime": "@vercel/python@3.12.2"
+        "runtime": "vercel/python@3.12.2"
       }
     }
   }
